SERVER-41127 Track state of termination initialization